--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "start": "serve -p 3000 dist"
   },
   "dependencies": {
+    "@babel/runtime": "^7.15.4",
     "preact": "^10.5.14",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-twitter-widgets": "^1.10.0",
     "wouter": "^2.7.4"
   },
   "devDependencies": {
